Avanzamenti e mini refactoring upload